--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -1,10 +1,10 @@
 included:
-  - TokyoBicycleParkingMap
+  - Shared
 excluded:
   - Pods/
   - Carthage/
-  - TokyoBicycleParkingMapTests
-  - proto
+  - Tests iOS
+  - Tests macOS
 analyzer_rules:
   - unused_declaration
   - unused_import
@@ -70,7 +70,6 @@ opt_in_rules:
   - yoda_condition
   - function_body_length
   - type_body_length
-  - file_name
 function_body_length:
   - 100   # warning
   - 200   # error
@@ -98,13 +97,6 @@ identifier_name:
     - 2
   excluded:
     - c
-file_name:
-  excluded:
-    - main.swift
-    - LinuxMain.swift
-    - TestHelpers.swift
-    - shim.swift
-    - AutomaticRuleTests.generated.swift
 custom_rules:
   rule_id:
     included: Source/SwiftLintFramework/Rules/.+/\w+\.swift
